--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
-  "name": "testsynth1",
+  "name": "project-2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nguyenmelissa23/TestSynth1.git"
+    "url": "git+https://github.com/nguyenmelissa23/CBC-Project2.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/nguyenmelissa23/TestSynth1/issues"
+    "url": "https://github.com/nguyenmelissa23/CBC-Project2/issues"
   },
-  "homepage": "https://github.com/nguyenmelissa23/TestSynth1#readme",
+  "homepage": "https://github.com/nguyenmelissa23/CBC-Project2#readme",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
+    "bootstrap-slider": "^9.8.0",
+    "express": "^4.15.2",
+    "mysql": "^2.13.0",
+
+    "sequelize": "^3.30.4",
+    "tone": "^0.10.0",
+    "web-audio-daw": "^2.3.1"
   }
+  // ,
+
+  //   "sequelize": "^3.30.4"
+
 }
